# bike-fitter

./: .env.example  .gitignore  docker-compose.yaml  pyproject.toml
app/: db.py
app/cli/: bike.py  fit.py  main.py  user.py
app/models/: __init__.py  bike.py  measurements.py  session.py  user.py
app/utils/: compute_angles.py  fitting_logic.py  video_analysis.py
